(feature) Add update/remove task possible